--- a/extension/dashboard/dashboard.html
+++ b/extension/dashboard/dashboard.html
@@ -164,20 +164,16 @@
   </div>
 
   <div class="info-box">
-    <h3>Install Native Helper (Linux / Firefox)</h3>
+    <h3>Install Native Helper (Linux/MacOS - Firefox)</h3>
 
     <ol>
-      <li>Download the <strong>PureWolf Native</strong> package from the GitHub releases.</li>
-      <li>Extract the archive.</li>
-      <li>Open a terminal in the extracted folder.</li>
-      <li>Run:</li>
+      <li>Check the github releases for the <a href="https://github.com/ArcaneSphere/PureWolf-Browser-Extension/releases" target="_blank"><strong>PureWolf Native</strong></a>
+          easy one-command package installer.</li>
+      <li>Open your Terminal and Run:</li>
+      <li><code>curl -fsSL https://github.com/ArcaneSphere/PureWolf-Browser-Extension/releases/download/v0.2.0/install.sh | bash</code></li>        
+      <li><strong>Restart Firefox</strong> after installation.</l1>
     </ol>
-
-    <pre><code>chmod +x install.sh
-./install.sh</code></pre>
-
-    <p><strong>Restart Firefox</strong> after installation.</p>
-      </div>
+  </div>
 
       <div class="info-box">
         <h3>Connect</h3>
@@ -224,7 +220,7 @@
       <div id="page-about" class="page">
         <h2>About</h2>
         <div class="info-box">
-          <p><strong>Version:</strong> 0.8.0</p>
+          <p><strong>Version:</strong> 0.8.1</p>
           <p><strong>Description:</strong> Browser extension to access TELA's decentralized applications and websites from the DERO blockchain.</p>
         </div>
       </div>
