--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -157,7 +157,7 @@
     <span class="popup-subtitle">TELA Services for DERO</span>
   </div>
   <div id="status">⏳ Checking status...</div>
-  <button id="open-dashboard">📊 Open Dashboard</button>
+  <button id="open-dashboard">Open Dashboard</button>
   <button id="toggle-connection" data-state="connected">⏏ Disconnect</button>
   <!-- <button id="start-server">▶ Start Server</button> -->
   <!-- <button id="stop-server">⏹ Stop Server</button> -->
