--- a/extension/dashboard/dashboard.html
+++ b/extension/dashboard/dashboard.html
@@ -241,8 +241,8 @@
   <div class="info-box">
     <h3>Install Native Helper (Linux/MacOS - Firefox)</h3>
     <ol>
-      <li>Open your Terminal and Run:<br>
-      <pre><code>curl -fsSL https://github.com/ArcaneSphere/<br>PureWolf-Browser-Extension/releases/download/v0.9.40/install.sh | bash</code></pre></li>        
+      <li>Open your Terminal and Run: 
+        <pre><code>curl -fsSL https://github.com/ArcaneSphere/PureWolf-Browser-Extension/releases/download/v0.9.40/install.sh | bash</code></pre></li>        
       <li><strong>Restart Firefox</strong> after installation.</l1>
     </ol>    
     <p>Visit the github releases page for more information on the <a href="https://github.com/ArcaneSphere/PureWolf-Browser-Extension/releases" target="_blank"><strong>PureWolf Native</strong></a> 
@@ -295,7 +295,7 @@
       <div id="page-about" class="page">
         <h2>About</h2>
         <div class="info-box">
-          <p><strong>Version:</strong> 0.9.40</p>
+          <p><strong>Version:</strong> 0.9.41</p>
           <p><strong>Description:</strong> Browser extension to access TELA's decentralized applications and websites from the DERO blockchain.</p>
         </div>
       </div>
